--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,33 +1,35 @@
 @font-face {
-  font-family: 'lato';
-  src: url('../fonts/lato-regular-webfont.woff2') format('woff2'),
-    url('../fonts/lato-regular-webfont.woff') format('woff');
+  font-family: 'proxima';
+  src: url('../fonts/proximanova_regular-webfont.woff2') format('woff2'),
+       url('../fonts/proximanova_regular-webfont.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'lato';
-  src: url('../fonts/lato-medium-webfont.woff2') format('woff2'),
-    url('../fonts/lato-medium-webfont.woff') format('woff');
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'lato';
-  src: url('../fonts/lato-bold-webfont.woff2') format('woff2'),
-    url('../fonts/lato-bold-webfont.woff') format('woff');
+  font-family: 'proxima';
+  src: url('../fonts/proximanova_bold-webfont.woff2') format('woff2'),
+       url('../fonts/proximanova_bold-webfont.woff') format('woff');
   font-weight: 700;
   font-style: normal;
 }
 
+
 @font-face {
-  font-family: 'lato';
-  src: url('../fonts/lato-black-webfont.woff2') format('woff2'),
-    url('../fonts/lato-black-webfont.woff') format('woff');
-  font-weight: 900;
+  font-family: 'proxima';
+  src: url('../fonts/proximanova_light-webfont.woff2') format('woff2'),
+       url('../fonts/proximanova_light-webfont.woff') format('woff');
+  font-weight: 300;
   font-style: normal;
+}
+
+@font-face {
+  font-family: 'proxima';
+  src: url('../fonts/proximanova_black-webfont.woff2') format('woff2'),
+       url('../fonts/proximanova_black-webfont.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+
 }
 
 html {
@@ -37,7 +39,7 @@ html {
 body {
   position: relative;
   margin: 0 auto;
-  font-family: 'lato', sans-serif;
+  font-family: 'proxima', sans-serif;
   font-style: normal;
   overflow-y: auto;
 }
