--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -141,6 +141,19 @@ p {
   background-repeat: no-repeat;
 }
 
+.btn-uncolor {
+  padding: 14px 24px;
+  color: var(--color-for-dark);
+  border: 1px solid var(--color-orange);
+  border-radius: 90px;
+  background-color: transparent;
+  transition: background-color .4s ease-in-out, color .4s ease-in-out, border .4s ease-in-out;
+}
+
+.btn-uncolor:hover {
+  background-color: var(--color-orange);
+}
+
 /* --------------------header  */
 
 .header__container {
@@ -202,7 +215,7 @@ p {
   height: 700px;
 }
 
-.swiper-slide {
+.slide2 {
   height: 700px;
   background-position: center;
   background-repeat: no-repeat;
@@ -523,4 +536,90 @@ p {
   width: 85px;
   height: 2px;
   background-color: var(--color-green);
+}
+
+/* .delivery__swiper,
+.delivery__swiper .swiper-wrapper {
+  max-height: 482px;
+} */
+
+.delivery__item {
+  padding-bottom: 27px;
+  background: var(--color-dark);
+  box-shadow: 5px 15px 40px rgba(30, 35, 66, 0.15);
+  border-radius: 20px;
+}
+
+.delivery__img {
+  margin-bottom: 27px;
+  width: 100%;
+}
+
+.delivery__subtitle {
+  margin-bottom: 11px;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 27px;
+  text-align: center;
+  color: var(--color-for-dark);
+}
+
+.delivery__box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.delivery__span {
+  display: inline-block;
+  height: 24px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  color: var(--color-for-dark);
+  background-position: left center;
+  background-repeat: no-repeat;
+}
+
+.delivery__span:nth-child(1) {
+  margin-right: 29px;
+}
+
+.delivery-time {
+  padding-left: 32px;
+  background-image: url('../images/icons/calendar.svg');
+}
+
+.delivery-weight {
+  padding-left: 26px;
+  background-image: url('../images/icons/box.svg');
+}
+
+.delivery__wrap {
+  margin-bottom: 18px;
+}
+
+.delivery__text {
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 124.5%;
+  text-align: center;
+  color: #A3A3A3;
+}
+
+.delivery__num {
+  font-size: 45px;
+  line-height: 56px;
+  color: var(--color-for-dark);
+}
+
+.delivery__currency {
+  color: var(--color-for-dark);
+}
+
+.delivery__btn:nth-child(1) {
+  margin-right: 14px;
+  padding: 10px 18px;
 }
