--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -335,6 +335,7 @@ button {
 }
 
 .calculate__num {
+  position: relative;
   display: inline-block;
   padding: 13px 23px 14px 20px;
   width: 60px;
@@ -350,6 +351,81 @@ button {
   border-radius: 90px;
 }
 
+/* .calculate__num::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 30px;
+  border: 3px solid transparent;
+  border-radius: 50px;
+  box-shadow: inset 0 0 0 2px var(--color-green);
+  margin: -5%;
+  transition: border .4s ease-in-out;
+  transform: rotate(0);
+} */
+
+/* .calculate__num:hover:before {
+  box-shadow: inset 0 0 0 2px var(--color-green);
+  border-radius: 50px;
+  transform: rotate(45deg);
+  border-top: 3px solid var(--color-green);
+  animation: round 5s linear infinite;
+  
+} */
+
+@keyframes spinner-border {
+  100% {
+    transform: rotate(90deg);
+  }
+}
+
+.submit-spinner {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  /* display: inline-block; */
+  /* width: 1rem;
+  height: 1rem; */
+  vertical-align: -0.125em;
+  border: 0.2em solid transparent;
+  border-right-color: transparent;
+  border-radius: 50%;
+  -webkit-animation: .75s linear infinite spinner-border;
+  animation: .75s linear infinite spinner-border;
+}
+
+.calculate__num:hover .submit-spinner {
+  border: 0.2em solid var(--color-dark);
+  border-right-color: var(--color-green);
+}
+
+/* .submit-spinner_hide {
+  display: none;
+} */
+
+@keyframes round {
+  0% { transform: rotate(45deg) translateZ(0%); }
+  
+  100% { transform: rotate(90deg) translateZ(100%); }
+  /* 0%, 100% {
+    clip: rect(0px, 60px, 0px, 0px);
+  }
+  25% {
+    clip: rect(0px, 60px, 60px, 0px);
+  }
+  50% {
+    clip: rect(60px, 60px, 60px, 0px);
+  }
+  75% {
+    clip: rect(0px, 60px, 60px, 60px);
+  } */
+}
+
 .calculate__num:not(:last-child) {
   margin-right: 41px;
 }
@@ -359,6 +435,7 @@ button {
   border-color: var(--color-green);
   background-color: var(--color-green);
 }
+
 
 .form__btn {
   padding: 21px 97px 20px 33px;
