--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -351,68 +351,45 @@ button {
   border-radius: 90px;
 }
 
-/* .calculate__num::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 30px;
-  border: 3px solid transparent;
-  border-radius: 50px;
-  box-shadow: inset 0 0 0 2px var(--color-green);
-  margin: -5%;
-  transition: border .4s ease-in-out;
-  transform: rotate(0);
+/* .calculate__num {
+  background: darken(red, 1.5%);
+  font-weight: 100;
 } */
-
-/* .calculate__num:hover:before {
-  box-shadow: inset 0 0 0 2px var(--color-green);
-  border-radius: 50px;
-  transform: rotate(45deg);
-  border-top: 3px solid var(--color-green);
-  animation: round 5s linear infinite;
-  
-} */
-
-@keyframes spinner-border {
-  100% {
-    transform: rotate(90deg);
+.calculate__num  svg {
+    height: 45px;
+    left: 0;
+    position: absolute;
+    top: 0; 
+    width: 100%; 
   }
+  
+  .calculate__num rect {
+    fill: none;
+    stroke: #fff;
+    stroke-width: 2;
+    stroke-dasharray: 422, 0;
+    transition: all 0.35s linear;
+  }
+
+
+.calculate__num:hover {
+  /* background: rgba(red, 0); */
+  font-weight: 900;
+  letter-spacing: 1px;
 }
+.calculate__num:hover rect {
+    stroke-width: 5;
+    stroke-dasharray: 15, 310;
+    stroke-dashoffset: 48;
+    transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
+  }
 
-.submit-spinner {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  /* display: inline-block; */
-  /* width: 1rem;
-  height: 1rem; */
-  vertical-align: -0.125em;
-  border: 0.2em solid transparent;
-  border-right-color: transparent;
-  border-radius: 50%;
-  -webkit-animation: .75s linear infinite spinner-border;
-  animation: .75s linear infinite spinner-border;
-}
 
-.calculate__num:hover .submit-spinner {
-  border: 0.2em solid var(--color-dark);
-  border-right-color: var(--color-green);
-}
-
-/* .submit-spinner_hide {
-  display: none;
-} */
-
-@keyframes round {
+/* @keyframes round {
   0% { transform: rotate(45deg) translateZ(0%); }
   
   100% { transform: rotate(90deg) translateZ(100%); }
-  /* 0%, 100% {
+  0%, 100% {
     clip: rect(0px, 60px, 0px, 0px);
   }
   25% {
@@ -423,8 +400,8 @@ button {
   }
   75% {
     clip: rect(0px, 60px, 60px, 60px);
-  } */
-}
+  }
+} */
 
 .calculate__num:not(:last-child) {
   margin-right: 41px;
